# 2023-02-DSM-GRUPO-04

./: .env.local  .gitignore  Dockerfile  README.md  main.py  manage.py  pyproject.toml
apps/categories/: models.py  views.py
apps/characters/: models.py  serializer.py  serializers.py  urls.py  views.py
apps/characters/migrations/: 0001_initial.py
apps/clients/: views.py
apps/effects/: models.py  serializer.py  serializers.py  urls.py  views.py
apps/effects/migrations/: 0001_initial.py
apps/inventories/: models.py  serializers.py  urls.py  views.py
apps/inventories/migrations/: 0001_initial.py
apps/itemcategories/: apps.py  models.py  serializer.py  urls.py  views.py
apps/itemcategories/migrations/: 0001_initial.py
apps/items/: models.py  serializer.py  urls.py  views.py
apps/items/migrations/: 0001_initial.py
apps/magics/: models.py  serializer.py  serializers.py  urls.py  views.py
apps/magics/migrations/: 0001_initial.py
apps/orders/: models.py  views.py
apps/players/: models.py  serializers.py  urls.py  views.py
apps/players/migrations/: 0001_initial.py
apps/products/: apps.py  views.py
apps/rarities/: apps.py  models.py  serializer.py  serializers.py  urls.py  views.py
apps/rarity/: models.py
apps/socialnetworks/: views.py
docker-resources/: files.sh  start.sh
grave_digger/: asgi.py  settings.py  urls.py
grave_digger/grave_digger/: settings.py  urls.py  wsgi.py
grave_digger/settings/: __init__.py
models/: category.py  client.py  client_socialnetwork.py  order.py  orderitem.py  product.py  socialnetwork.py
(+6 files in other folders)
